--- a/amazon.html
+++ b/amazon.html
@@ -105,6 +105,8 @@
       </div>
     </div>
 
+    <script src="data/products.js"></script>
+
     <script src="scripts/amazon.js"></script>
   </body>
 </html>
